# ontouml-vocabulary-lib

./: .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml  requirements.txt  update_documentation.py
.github/workflows/: bots-auto-merge.yml  code_testing.yml  dependabot-auto-merge.yml  dependency-review.yml  scorecard.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_sources/autoapi/: index.rst.txt
docs/_sources/autoapi/ontouml_vocabulary_lib/: index.rst.txt
docs/_sources/autoapi/ontouml_vocabulary_lib/constants/: index.rst.txt
docs/_sources/autoapi/ontouml_vocabulary_lib/constants/constants_classes/: index.rst.txt
docs/_sources/autoapi/ontouml_vocabulary_lib/constants/constants_misc/: index.rst.txt
docs/_sources/autoapi/ontouml_vocabulary_lib/exceptions/: index.rst.txt
docs/_sources/autoapi/ontouml_vocabulary_lib/ontouml/: index.rst.txt
docs/_sources/autoapi/ontouml_vocabulary_lib/ouexception/: index.rst.txt
docs/_sources/autoapi/ontouml_vocabulary_lib/terms/: index.rst.txt
docs/_sources/autoapi/ontouml_vocabulary_lib/tests/: index.rst.txt
docs/autoapi/: index.html
docs/autoapi/ontouml_vocabulary_lib/: index.html
docs/autoapi/ontouml_vocabulary_lib/constants/: index.html
docs/autoapi/ontouml_vocabulary_lib/constants/constants_classes/: index.html
docs/autoapi/ontouml_vocabulary_lib/constants/constants_misc/: index.html
docs/autoapi/ontouml_vocabulary_lib/exceptions/: index.html
docs/autoapi/ontouml_vocabulary_lib/ontouml/: index.html
docs/autoapi/ontouml_vocabulary_lib/ouexception/: index.html
docs/autoapi/ontouml_vocabulary_lib/terms/: index.html
docs/autoapi/ontouml_vocabulary_lib/tests/: index.html
docs/autoapi/ontouml_vocabulary_lib/tests/test_constants/: index.html
docs/autoapi/ontouml_vocabulary_lib/tests/test_ontouml/: index.html
ontouml_vocabulary_lib/: __init__.py  ontouml.py  ouexception.py  terms.py
ontouml_vocabulary_lib/constants/: __init__.py  constants_classes.py  constants_misc.py
ontouml_vocabulary_lib/tests/: __init__.py
ontouml_vocabulary_lib/tests/test_constants/: __init__.py  fixtures_test_constants.py  test_constants.py
ontouml_vocabulary_lib/tests/test_ontouml/: __init__.py  fixtures_test_ontouml.py  test_ontouml_attributes.py  test_ontouml_get_namespace.py  test_ontouml_get_term.py  test_ontouml_list_all.py
sphinx/: conf.py
(+16 files in other folders)
