[tool.poetry]
name = "ontouml_vocabulary_lib"
version = "1.0.1"
description = "OntoUML Python Library"
license = "Apache-2.0"
authors = ["Pedro Paulo F. Barcelos <p.p.favatobarcelos@utwente.nl>"]
readme = "README.md"
homepage = "https://w3id.org/ontouml/vocabulary-lib"
repository = "https://w3id.org/ontouml/vocabulary-lib"
documentation = "https://w3id.org/ontouml/vocabulary-lib/docs"
keywords = ["semantic-web", "knowledge-graph", "ontouml", "ontology-driven-development", "ontouml-vocabulary", "rdflib"]
packages = [{ include = "ontouml_vocabulary_lib" }]
exclude = ["ontouml_vocabulary_lib/tests"]

[tool.poetry.urls]
"PyPi Project" = "https://pypi.org/project/ontouml-vocabulary-lib/"

[tool.poetry.dependencies]
python = "^3.09"
rdflib = "^7.0.0"

[tool.poetry.group.dev.dependencies]
loguru = "^0.7.2"
myst-parser = ">=2,<4"
poetry = "^1.6.1"
pre-commit = "^3.4.0"
pytest = ">=7.4.2,<9.0.0"
sphinx = "^7.2.6"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-size = "^0.2.0"
sphinx-rtd-theme = ">=1.3,<3.0"
sphinx-toolbox = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.vulture]
paths = ["."]
exclude = ["docs/", "sphinx/", "ontouml_vocabulary_lib/terms.py"]
